Texture paint - "Face Selection Masking" doesn't reveal faces properly #46867

Closed
opened 2015-11-25 11:41:02 +01:00 by Fasit · 5 comments

Windows 7 64

ATI Radeon HD 6850

Tested on 2.76 b

In texture paint mode when you use "Face Selection Masking" and create a selection, if then you "Shift+h" hide unselected, exit out of "Face Selection Masking" mode and go back to face selection masking mode again and Alt + h reveal all; you can only select the faces which you previously selected although you revealed the hidden faces. It seems face buffer isn't cleared properly. You need to re exit face selection mode and come back again to be able to select all faces.

  • Go to texture paint mode
  • Enable "face selection masking"
  • Select some faces
  • Shift + h (hide unselected)
  • Disable "face selection masking"
  • Re-enable "face selection masking"
  • Alt + h (reveal hidden)
  • You cant select faces out side of your previous selection even though all the faces are now revealed !

Note : There is also another bug which I reproduced twice by accident which makes the mesh object disappear during face selection enable/disable related to hidden faces; but cant figure out the steps exactly, so if you come by that problem there is also that. It seems pretty nasty since it locks you up in texture mode (cant go back to object mode) with no mesh visible and all you can do is quit.

Windows 7 64 ATI Radeon HD 6850 Tested on 2.76 b In texture paint mode when you use "Face Selection Masking" and create a selection, if then you "Shift+h" hide unselected, exit out of "Face Selection Masking" mode and go back to face selection masking mode again and Alt + h reveal all; you can only select the faces which you previously selected although you revealed the hidden faces. It seems face buffer isn't cleared properly. You need to re exit face selection mode and come back again to be able to select all faces. * Go to texture paint mode * Enable "face selection masking" * Select some faces * Shift + h (hide unselected) * Disable "face selection masking" * Re-enable "face selection masking" * Alt + h (reveal hidden) * You cant select faces out side of your previous selection even though all the faces are now revealed ! Note : There is also another bug which I reproduced twice by accident which makes the mesh object disappear during face selection enable/disable related to hidden faces; but cant figure out the steps exactly, so if you come by that problem there is also that. It seems pretty nasty since it locks you up in texture mode (cant go back to object mode) with no mesh visible and all you can do is quit.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ygtsvtr

Added subscriber: @ygtsvtr
Campbell Barton self-assigned this 2015-11-25 12:21:59 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by a9ddee0e56

This issue was referenced by a9ddee0e568578ff02cc2dee9dfb8a63e7cc522c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46867
No description provided.