Fix T46867: Face-Mask hiding failed on mode switch

Since GPU refactor, hidden faces are cached.
However this needs to be re-calculated when state of hidden faces changes.